@@ -1,0 +1,38 @@
+/*
+ * Copyright 2015 Realm Inc.
+ *
+ * Licensed under the Apache License, Version 2.0 (the "License");
+ * you may not use this file except in compliance with the License.
+ * You may obtain a copy of the License at
+ *
+ * http://www.apache.org/licenses/LICENSE-2.0
+ *
+ * Unless required by applicable law or agreed to in writing, software
+ * distributed under the License is distributed on an "AS IS" BASIS,
+ * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+ * See the License for the specific language governing permissions and
+ * limitations under the License.
+ */
+
+package io.realm.exceptions;
+
+/**
+ * RealmError is Realm specific unrecoverable errors.
+ */
+
+public class RealmError extends Error {
+    public RealmError() {
+    }
+
+    public RealmError(String detailMessage) {
+        super(detailMessage);
+    }
+
+    public RealmError(String detailMessage, Throwable throwable) {
+        super(detailMessage, throwable);
+    }
+
+    public RealmError(Throwable throwable) {
+        super(throwable);
+    }
+}
